Change DB init to async

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ configparser = "*"
 mysqlclient = "*"
 sqlalchemy = {extras = ["asyncio"] }
 ipfshttpclient = "*"
+aiomysql = "*"
 
 [dev-packages]
 
